fixed spacing

--- a/css/OutcomesOverlay.css
+++ b/css/OutcomesOverlay.css
@@ -136,7 +136,6 @@
 	position: absolute;
 	left: 233px;
 	top: 36px;
-	zwidth: 566px;
 	height: 748px;
 	border-left: 1px solid #9e9e9e;
 	background-color: #fff;
@@ -157,16 +156,11 @@
 }
 
 .item_table_container {
-	margin: 0px 0px 30px 0px;
-	width: 695px;
+	margin-bottom: 30px;
 }
 
 .point_bucket {
 	background-color: #ccc;
-}
-
-.item_table table {
-	width: 566px;
 }
 
 .item_table thead {
@@ -177,12 +171,13 @@
 	border-bottom: 1px solid #cccccc;
 }
 
+
 .item_table td {
 	padding: 3px 10px 3px 20px;
 }
 
 .item_table .glyphicon-play{
-	margin-right: 20px;
+	margin-right: 16px;
 }
 
 
@@ -194,7 +189,7 @@
 }
 
 .empty_col4 {
-	width: 160px;
+	width: 154px;
 }
 
 .empty_col5 {
